# projects-auction

./: .env  .gitignore  docker-compose.yml  pyproject.toml
application/dto/: order_in.py  user_in.py
application/interactors/: register_user.py
application/interfaces/: employee_repository.py  order_repository.py  transaction_manager.py  unit_of_work.py
di/providers/: infra_provider.py  psql_provider.py
domain/builders/: order_builder.py
domain/entities/: deal.py  employee.py
domain/factories/: deal_factory.py
infrastructure/services/: password_hasher.py
src/: main.py
src/application/dto/: cancel_order_dto.py  deal_in.py  deal_out.py  employee_out.py  order_out.py  order_reward_in_dto.py  order_reward_out_dto.py  take_order_in_dto.py  take_order_out_dto.py  user_out.py
src/application/interactors/: cancel_order.py  get_all_employees.py  get_assigned_orders.py  get_available_employees.py  get_available_orders.py  take_order.py  take_order_reward.py
src/application/interfaces/: deal_repository.py  employee_repository.py  order_repository.py  password_hasher.py  transaction_repository.py  user_repository.py
src/config/: settings.py
src/di/providers/: app_provider.py  infra_provider.py  psql_provider.py
src/domain/: exceptions.py
src/domain/builders/: employee_builder.py  order_builder.py  user_builder.py
src/domain/entities/: deal.py  employee.py  order.py  transaction.py  user.py
src/domain/service/: order_assignment.py  reward_service.py
src/infrastructure/: __init__.py
src/scripts/: init_db.py  orders.py
(+15 files in other folders)
